2011-01-02  Dan Bernstein  <mitz@apple.com>

        Rubber-stamped by Simon Fraser.

        <rdar://problem/8812159> Update copyright strings

        * Info.plist:
        * WebProcess/Info.plist:

2011-01-02  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Csaba Osztrogonác.

        WebKit 2 does not build on 64bits with a recent GCC
        https://bugs.webkit.org/show_bug.cgi?id=51754

        Change the argument coding for DatabaseDetails to use explicitely the 64 bits type.

        * Shared/OriginAndDatabases.h:
        * Shared/WebCoreArgumentCoders.h:

2011-01-02  Csaba Osztrogonác  <ossy@webkit.org>

        Reviewed by Adam Barth.

        Move JavaScriptCore to Source
        https://bugs.webkit.org/show_bug.cgi?id=51604

        Workaround until moving all sources to Source directory is finished.

        * Scripts/generate-forwarding-headers.pl: Add Sources to searching path for JavaScriptCore.

2011-01-01  Adam Barth  <abarth@webkit.org>

        Speculative build fix for Qt.  Add some more include paths.

        * WebKit2.pro:

2011-01-01  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Move JavaScriptCore to Source
        https://bugs.webkit.org/show_bug.cgi?id=51604

        * WebKit2.pro:
          - Point to JavaScriptCore in its new location.

2010-12-15  Amruth Raj  <amruthraj@motorola.com> and Ravi Kasibhatla  <ravi.kasibhatla@motorola.com>

        Reviewed by Martin Robinson.

        [GTK] Enable building whatever already exists of WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=37369

        * GNUmakefile.am: Added. 
        * WebKit2Prefix.h: Included WebCore/config.h for GTK port as the first header
        file for WebKit2 sources files.
        * gtk: Added.
        * gtk/webkit2.pc.in: Added.

2010-12-29  Juha Savolainen  <juha.savolainen@weego.fi>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] [WK2] Added more webattributes to the qwkpreferences